--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
       <h1>My Portfolio</h1>
     </header>
       <nav>
-        <ul>
-          <li><a href="#">About Me</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Contact Me</a></li>
-          <li><a href="#">Resume</a></li>
-        </ul>
+        <a href="#">About Me</a>
+        <a href="#">Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Resume</a>
       </nav>
 
     <main>
