--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <main>
       <section>
           <h2>About Me</h2>
-          <div>
             <p>
               Hi, My name is Zahrah this is my portfolio, I have here samples of my work. 
             </p>
+            <div>
+            <article>
+            </article>
         <article>
           <h2>Work</h2>
           <div class="products">
@@ -50,17 +52,17 @@
           </div>          
         </article>
         <article>
-            <h2>Contact Me</h2>
+            <h2>Contact Me </h2>
            <div class="contact-info">
-            <div class="card">
+            <div class="content">
               <i class="card-icon far fa-email"></i>
               <p>portfolio@website.com</p>
             </div>
-            <div class="card">
+            <div class="content">
               <i class="card-icon fas fa-phone"></i>
               <p>2222-2222-22</p>
             </div>
-            <div class="card">
+            <div class="content">
               <i class="card-icon fas fa-socialmedia"></i>
               <p>Github Twitter</p>
             </div>
